fixed username not showing, added error message for when api calls are used up, fixed loading icon not showing,  added various visual enhancements

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,7 +13,7 @@
     --mid-grey: #8d8d8d;
     --grey: #E5E5E5;
     --white: #FFFFFF;
-    --error: #bd1044;
+    --error: #e91252;
 
 }
 
@@ -94,6 +94,7 @@ nav i:hover {
 .search span {
     color:var(--error);
     margin-bottom: 10px;
+    font-weight: 600;
 }
 
 .search form {
